--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
           </Grid.RowDefinitions>
+          
               <Grid Background="{StaticResource additional}"/>
               <Image Source="/Assets/logo.png" HorizontalAlignment="Left"/>
           <TextBlock Grid.Row="0" Text="ООО РУЧКИ"           HorizontalAlignment="Center"
@@ -21,7 +22,11 @@
           Background="{StaticResource additional}"
           FontSize="20"
           FontWeight="Bold"/>
-   
+   <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 30 0 0" >
+            <Button x:Name="BtnEditProducts" Content="Товары" Click="ProductsButton_Click" />
+            <Button x:Name="BtnEditOrders" Content="Заказы" />
+            <Button x:Name="BtnBack" Content="Назад"  Click="BackButton_Click"/>
+</StackPanel>
     <ContentControl x:Name="MainContentControl"  Grid.Row ="1"/>
     <Grid Grid.Row="2" Background="{StaticResource additional}"/>
     </Grid>
