--- a/Views/ProductsView.axaml
+++ b/Views/ProductsView.axaml
@@ -69,8 +69,17 @@ Stretch="Uniform"  Source="{Binding GetImage}" />
         </Grid>
         </DataTemplate>
         </ListBox.ItemTemplate>
+        <ListBox.ContextMenu>
+<ContextMenu>
+<MenuItem Header="Добавить в заказ"/>
+</ContextMenu>
+</ListBox.ContextMenu>
 		</ListBox>
   <TextBlock Grid.Row="2" x:Name="TextBlockCount" Width="300" HorizontalAlignment="Left" />
+  <TextBlock Grid.Row="2" x:Name="TextBlockBasketInfo" Width="200"
+HorizontalAlignment="Right" Margin="0 0 140 0" />
+<Button Grid.Row="2" Width="120" HorizontalAlignment="Right" Content="Корзина"
+x:Name="BtnBasket" />
   </Grid>
 </UserControl>
 
