--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -17,15 +17,18 @@
           
               <Grid Background="{StaticResource additional}"/>
               <Image Source="/Assets/logo.png" HorizontalAlignment="Left"/>
+              <Button x:Name="BtnLogin"  Content="Войти" IsVisible="True" Click="LoginButtonClick"  Margin="150 0 0 0"/>
+              <Button x:Name="BtnLogout"  Content="Выйти" IsVisible="False" Click="LogoutButtonClick" Margin="150 0 0 0"/>
           <TextBlock Grid.Row="0" Text="ООО РУЧКИ"           HorizontalAlignment="Center"
           VerticalAlignment="Center"
           Background="{StaticResource additional}"
           FontSize="20"
           FontWeight="Bold"/>
+          <TextBlock Grid.Row="0" x:Name="TextBlockUser" Margin="0 0 200 0" Width="200" HorizontalAlignment="Right" VerticalAlignment="Top"/>
    <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 30 0 0" >
-            <Button x:Name="BtnEditProducts" Content="Товары" Click="ProductsButton_Click" />
-            <Button x:Name="BtnEditOrders" Content="Заказы" />
-            <Button x:Name="BtnBack" Content="Назад"  Click="BackButton_Click"/>
+            <Button x:Name="BtnEditProducts" IsVisible="False" Content="Товары" Click="ProductsButton_Click" />
+            <Button x:Name="BtnEditOrders"  IsVisible="False" Content="Заказы" />
+            <Button x:Name="BtnBack" IsVisible="False" Content="Каталог"  Click="BackButton_Click"/>
 </StackPanel>
     <ContentControl x:Name="MainContentControl"  Grid.Row ="1"/>
     <Grid Grid.Row="2" Background="{StaticResource additional}"/>
