--- a/Views/ProductsView.axaml
+++ b/Views/ProductsView.axaml
@@ -76,9 +76,9 @@ Stretch="Uniform"  Source="{Binding GetImage}" />
 </ListBox.ContextMenu>
 		</ListBox>
   <TextBlock Grid.Row="2" x:Name="TextBlockCount" Width="300" HorizontalAlignment="Left" />
-  <TextBlock Grid.Row="2" x:Name="TextBlockBasketInfo" Width="200"
+  <TextBlock Grid.Row="2" x:Name="TextBlockBasketInfo" Width="200" IsVisible = "false"
 HorizontalAlignment="Right" Margin="0 0 140 0" />
-<Button Grid.Row="2" Width="120" HorizontalAlignment="Right" Content="Корзина" x:Name="BtnBasket" Click="BtnBasket_Click"/>
+<Button Grid.Row="2" Width="120" HorizontalAlignment="Right" Content="Корзина" IsVisible = "false" x:Name="BtnBasket" Click="BtnBasket_Click"/>
   </Grid>
 </UserControl>
 
