--- a/Views/OrdersDataGridView.axaml
+++ b/Views/OrdersDataGridView.axaml
@@ -6,16 +6,38 @@
               xmlns:vm="using:ViewModels"
              x:Class="Views.OrdersDataGridView"
              x:DataType="vm:OrdersGridViewModel">
-  <UserControl.DataContext>
-    <vm:OrdersGridViewModel />
-  </UserControl.DataContext>
+  
+
+  
 <Grid>
   <Grid.RowDefinitions>
+    <RowDefinition Height="auto"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="40"/>
 </Grid.RowDefinitions>
-
-    <DataGrid Grid.Row="0"
+<WrapPanel Grid.Row="0" HorizontalAlignment="Stretch">
+  <StackPanel Orientation="Horizontal">
+    <TextBlock Text="Введите наименование товара для поиска:"/>
+    <TextBox Width="275" x:Name="TBoxSearch" TextChanged="TBoxSearchTextChanged"/>
+  </StackPanel>
+<StackPanel Orientation="Horizontal">
+  <TextBlock Text="Выберите скидку" />
+<ComboBox Width="275" x:Name="ComboDiscont" SelectionChanged="ComboBoxSelectionChanged" >
+  <ComboBoxItem Content="Все диапазоны"/>
+  <ComboBoxItem Content="0 - 5.99%"/>
+  <ComboBoxItem Content="6 - 10.99 %"/>
+  <ComboBoxItem Content="11% и более"/>
+</ComboBox>
+</StackPanel>
+<StackPanel Orientation="Horizontal">
+<TextBlock Text="Сортировать по"/>
+<ComboBox Width="275"  x:Name="ComboSort" SelectionChanged="ComboBoxSelectionChanged" >
+  <ComboBoxItem Content="По возрастанию общей суммы заказа"/>
+  <ComboBoxItem Content="По убыванию общей суммы заказа"/>
+</ComboBox>
+  </StackPanel>
+  </WrapPanel>
+    <DataGrid Grid.Row="1"
 				  x:Name="OrdersDataGrid" 
                    AutoGenerateColumns="False"
                    IsReadOnly="true" 
@@ -24,31 +46,35 @@
           BorderBrush="Gray" RowHeight="40"
           Background="{StaticResource main}"
           ItemsSource="{Binding Orders}">
-          <DataGrid.Columns>
-            
-    <DataGridTextColumn Binding="{Binding Id}" Header="Номер заказа" />
-    <DataGridTextColumn Binding="{Binding UsernameNavigation.FirstName}" Header="Клиент" Width="2*"/>
-    <DataGridTextColumn Binding="{Binding CreateDate}" Header="Дата создания" Width="2*"/>
+          <DataGrid.Styles>
+            <Style Selector="DataGridRow">
+              <Setter Property="Background" Value="#20b2aa"/>
+            </Style>
+            </DataGrid.Styles>
+          <DataGrid.Columns >
+    <DataGridTextColumn Binding="{Binding Id}" Header="№" Width="40"/>
+    <DataGridTextColumn Binding="{Binding Status.Title}" Header="Статус" Width="*"/>
+    <DataGridTextColumn Binding="{Binding GetUserFIO}" Header="Клиент" Width="3*"/>
+    <DataGridTextColumn Binding="{Binding CreateDate}" Header="Дата создания" Width="*"/>
     <DataGridTextColumn Binding="{Binding DeliveryDate}" Header="Дата доставки" Width="*"/>
-    <DataGridTextColumn Binding="{Binding GetTotalCost, StringFormat='C'}" Header="Стоимость" Width="*"/>
+    <DataGridTextColumn Binding="{Binding GetTotalCost, StringFormat='C'}" Header="Общая сумма заказа" Width="*"/>
+    <DataGridTextColumn Binding="{Binding GetTotalDiscount, StringFormat=' {0} %'}" Header="Общий размер скидки" Width="*"/>
     <DataGridTextColumn Binding="{Binding Pickuppoint.Address}" Header="Пункт выдачи" Width="*"/>
     <DataGridTextColumn Binding="{Binding GetCode}" Header="Код выдачи" Width="*"/>
     <DataGridTemplateColumn Width="auto" Header="Редактировать">
         <DataGridTemplateColumn.CellTemplate>
             <DataTemplate>
-                <Button   Content="..."  Margin="0"/>
+                <Button  Click="EditButton_Click" HorizontalAlignment="Center" Content="..."  Margin="0"/>
         </DataTemplate>
         </DataGridTemplateColumn.CellTemplate>
 </DataGridTemplateColumn>
-<DataGridTemplateColumn Width="auto" Header="Удалить">
-        <DataGridTemplateColumn.CellTemplate>
-            <DataTemplate>
-                <Button   Content="X"  Margin="0"/>
-        </DataTemplate>
-        </DataGridTemplateColumn.CellTemplate>
-</DataGridTemplateColumn>
+
   </DataGrid.Columns>
       </DataGrid>
+
+       <TextBlock Grid.Row="2" x:Name="TextBlockCount" Margin="10 0 0 0"
+   FontSize="14" FontWeight="Bold" VerticalAlignment="Center" Width="300"
+    HorizontalAlignment="Left" />
 </Grid>
 </UserControl>
 
